# clawd

./: .gitignore  .playwright-env  AGENTS.md  BOOTSTRAP.md  IDENTITY.md  MEMORY.md  PIPELINE_STATUS.json  RESTORE.md  SOUL.md  TASKS.md  TOOLS.md  USER.md  e2e-carpool-flow-test.js  restore-clawdbot-minimax.md  restore-clawdbot-minimax.sh  润德教育项目记录.md
skills/browser-use/: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLOUD.md  Dockerfile  README.md  pyproject.toml
skills/browser-use/.github/ISSUE_TEMPLATE/: 1_element_detection_bug.yml  2_bug_report.yml  3_feature_request.yml
skills/browser-use/.github/workflows/: cloud_evals.yml  docker.yml  eval-on-pr.yml  install-script.yml  lint.yml  package.yaml  publish.yml  stale-bot.yml  test.yaml
skills/browser-use/browser_use/: __init__.py  cli.py  config.py  init_cmd.py  logging_config.py  observability.py  utils.py
skills/browser-use/browser_use/actor/: README.md  __init__.py  element.py  mouse.py  page.py  utils.py
skills/browser-use/browser_use/agent/: cloud_events.py  gif.py  judge.py  prompts.py  service.py  variable_detector.py  views.py
skills/browser-use/browser_use/browser/: __init__.py  demo_mode.py  events.py  profile.py  session.py  session_manager.py  video_recorder.py  views.py  watchdog_base.py
skills/browser-use/browser_use/code_use/: README.md  __init__.py  formatting.py  namespace.py  notebook_export.py  service.py  system_prompt.md  utils.py  views.py
skills/browser-use/browser_use/controller/: __init__.py
skills/browser-use/browser_use/dom/: enhanced_snapshot.py  markdown_extractor.py  service.py  views.py
skills/browser-use/browser_use/filesystem/: file_system.py
skills/browser-use/browser_use/llm/: README.md  __init__.py  base.py  exceptions.py  messages.py  models.py  schema.py  views.py
skills/browser-use/browser_use/mcp/: __main__.py  client.py  controller.py  server.py
skills/browser-use/browser_use/sandbox/: __init__.py  sandbox.py  views.py
skills/browser-use/browser_use/screenshots/: __init__.py  service.py
skills/browser-use/browser_use/skill_cli/: README.md  __init__.py  __main__.py  api_key.py  direct.py  install.sh  install_config.py  main.py  protocol.py  python_session.py  server.py  sessions.py  tunnel.py  utils.py
skills/browser-use/browser_use/skills/: README.md  __init__.py  service.py  utils.py  views.py
skills/browser-use/browser_use/sync/: auth.py  service.py
skills/browser-use/browser_use/telemetry/: service.py  views.py
skills/browser-use/browser_use/tokens/: custom_pricing.py  mappings.py  service.py
skills/browser-use/browser_use/tools/: service.py  utils.py  views.py
skills/browser-use/docker/: build-base-images.sh
skills/browser-use/docs/: development.mdx  docs.json  introduction.mdx  production.mdx  quickstart.mdx  quickstart_llm.mdx  supported-models.mdx
skills/browser-use/docs/customize/: hooks.mdx
skills/browser-use/docs/development/: get-help.mdx  n8n-integration.mdx  roadmap.mdx
skills/browser-use/examples/: demo_mode_example.py  simple.py
skills/browser-use/examples/browser/: cloud_browser.py  custom_headers.py  parallel_browser.py  playwright_integration.py  real_browser.py  save_cookies.py  using_cdp.py
skills/browser-use/examples/cloud/: 01_basic_task.py  02_fast_mode_gemini.py  03_structured_output.py  04_proxy_usage.py  05_search_api.py  README.md  env.example
skills/browser-use/examples/code_agent/: extract_products.py  filter_webvoyager_dataset.py
skills/browser-use/examples/custom-functions/: 2fa.py  action_filters.py  actor_use.py  advanced_search.py  cua.py  file_upload.py  notification.py  onepassword_2fa.py  parallel_agents.py  save_to_file_hugging_face.py
skills/browser-use/examples/features/: add_image_context.py  blocked_domains.py  custom_output.py  custom_system_prompt.py  download_file.py  fallback_model.py  follow_up_task.py  follow_up_tasks.py  initial_actions.py  judge_trace.py  large_blocklist.py  multi_tab.py  parallel_agents.py  process_agent_output.py  rerun_history.py  restrict_urls.py  scrolling_page.py  secure.py  sensitive_data.py  small_model_for_extraction.py  stop_externally.py  video_recording.py
skills/browser-use/examples/file_system/: alphabet_earnings.py  excel_sheet.py  file_system.py
skills/browser-use/examples/getting_started/: 01_basic_search.py  02_form_filling.py  03_data_extraction.py  04_multi_step_task.py  05_fast_agent.py
skills/browser-use/examples/integrations/: gmail_2fa_integration.py
skills/browser-use/examples/models/: aws.py  azure_openai.py  browser_use_llm.py  bu_oss.py  cerebras_example.py  claude-4-sonnet.py  deepseek-chat.py  gemini-3.py  gemini.py  gpt-4.1.py  gpt-5-mini.py  lazy_import.py  llama4-groq.py  mistral.py  modelscope_example.py  moonshot.py  novita.py  oci_models.py  ollama.py  openrouter.py  qwen.py  skills.py  vercel_ai_gateway.py
skills/browser-use/examples/observability/: openLLMetry.py
skills/browser-use/examples/sandbox/: example.py  structured_output.py
skills/browser-use/examples/ui/: command_line.py  gradio_demo.py  streamlit_demo.py
skills/browser-use/examples/use-cases/: apply_to_job.py  buy_groceries.py  captcha.py  check_appointment.py  extract_pdf_content.py  find_influencer_profiles.py  onepassword.py  pcpartpicker.py  phone_comparison.py  shopping.py
skills/browser-use/tests/ci/: conftest.py  evaluate_tasks.py  test_action_loop_detection.py  test_agent_planning.py  test_ai_step.py  test_ax_name_matching.py  test_budget_warning.py  test_cli_coordinate_click.py  test_cli_headed_flag.py  test_cli_install_init.py  test_coordinate_clicking.py  test_doctor_command.py  test_extension_config.py  test_fallback_llm.py  test_file_system_docx.py  test_file_system_images.py  test_file_system_llm_integration.py  test_history_wait_time.py  test_install_config.py  test_llm_retries.py  test_markdown_chunking.py  test_markdown_extractor.py  test_multi_act_guards.py  test_rerun_ai_summary.py  test_sandbox_structured_output.py  test_screenshot_exclusion.py  test_search_find.py  test_server_locking.py  test_tools.py  (+6 more)
(+778 files in other folders)
